[gd_scene load_steps=5 format=3 uid="uid://b31re741exqx6"]

[ext_resource type="Script" path="res://src/ui/pause_menu.gd" id="1_j7x5x"]
[ext_resource type="Theme" uid="uid://d3i20r1tbl66f" path="res://assets/ui/menu.theme" id="1_lpkct"]
[ext_resource type="PackedScene" uid="uid://brxxxb27464ll" path="res://assets/ui/btn_signal.tscn" id="2_xhpm1"]
[ext_resource type="PackedScene" uid="uid://blfqjtws1t4bu" path="res://assets/ui/btn_quit_game.tscn" id="3_42tlf"]

[node name="PauseMenuHandler" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_lpkct")
script = ExtResource("1_j7x5x")

[node name="Overlay" type="ColorRect" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.137255)

[node name="Label" type="Label" parent="Overlay"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = 135.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 72
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="BtnResume" parent="Overlay/VBoxContainer" instance=ExtResource("2_xhpm1")]
layout_mode = 2
focus_neighbor_top = NodePath("../BtnQuitGame")
focus_neighbor_bottom = NodePath("../BtnMainMenu")
text = "Resume"
on_click = 2

[node name="BtnMainMenu" parent="Overlay/VBoxContainer" instance=ExtResource("2_xhpm1")]
layout_mode = 2
focus_neighbor_top = NodePath("../BtnResume")
focus_neighbor_bottom = NodePath("../BtnQuitGame")
text = "Quit Game"
on_click = 3

[node name="BtnQuitGame" parent="Overlay/VBoxContainer" instance=ExtResource("3_42tlf")]
layout_mode = 2
focus_neighbor_top = NodePath("../BtnMainMenu")
focus_neighbor_bottom = NodePath("../BtnResume")
text = "Exit to Desktop"
